--- a/OnlineStoreAdmin/src/main/resources/templates/common/header.html
+++ b/OnlineStoreAdmin/src/main/resources/templates/common/header.html
@@ -11,7 +11,7 @@
 <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 
 <!-- Custom styles for this template -->
-<link href="@{/css/style.css}" rel="stylesheet" />
+<link th:href="@{/css/style.css}" rel="stylesheet" />
 
 <link rel="icon" href="/image/applie-touch-icon.png" />
 </head>
