--- a/OnlineStoreAdmin/src/main/resources/templates/common/header.html
+++ b/OnlineStoreAdmin/src/main/resources/templates/common/header.html
@@ -111,7 +111,7 @@
 							class="icon-bar"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" th:href="@{/}">Admin Portal</a>
+					<a class="navbar-brand" th:href="@{/}">Online Store Admin Portal</a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
