--- a/OnlineStoreAdmin/src/main/resources/templates/addBook.html
+++ b/OnlineStoreAdmin/src/main/resources/templates/addBook.html
@@ -207,7 +207,7 @@
 						<div class="col-md-8">
 							<textarea name="description" rows="5" class="form-control"
 								id="description" th:value="${book.description}"
-								placeholder="Description" />
+								placeholder="Description"></textarea>
 							<span class="help-block">Description of the book</span>
 						</div>
 					</div>
