Update functionality of book added by admin

--- a/OnlineStoreAdmin/src/main/resources/templates/common/header.html
+++ b/OnlineStoreAdmin/src/main/resources/templates/common/header.html
@@ -13,6 +13,9 @@
 <!-- Custom styles for this template -->
 <link th:href="@{/css/style.css}" rel="stylesheet" />
 
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>tinymce.init({ selector:'textarea' });</script>
+
 <link rel="icon" href="/image/applie-touch-icon.png" />
 </head>
 
