--- a/OnlineStoreAdmin/src/main/resources/templates/bookList.html
+++ b/OnlineStoreAdmin/src/main/resources/templates/bookList.html
@@ -4,7 +4,7 @@
 <head th:replace="common/header :: common-header" />
 
 <body>
-	<div th:replace="common/header :: navbar" />
+	<div th:replace="common/header :: navbar"></div>
 	<div class="container">
 		<div class="table-responsive">
 			<table id="bookListTable" class="table table-bordered table-hover table-striped">
@@ -35,6 +35,16 @@
 		</div>
 	
 	</div>
-	<div th:replace="common/header :: body-bottom-scripts" />
+	<div th:replace="common/header :: body-bottom-scripts"></div>
+	
+	<script th:inline="none" >
+		$(document).ready(function() {
+			$("#bookListTable").DataTable({
+				"lengthMenu": [[5,10,15,20,-1],[5,10,15,20,"All"]],
+				"ordering": false,
+				stateSave: true
+			});
+		});
+	</script>
 </body>
 </html>
